# stringFinder

./: README.md  pyproject.toml
src/: __init__.py  __main__.py  globs.py  main.py  mainwindow.py
src/funcs/: __init__.py  microsuck.py  reader.py  rules.py  template.xml  types.py
src/views/: languages.py  unnamed.py
